--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -12,6 +12,7 @@
     
       
      <button id="rzp-button1">Pay Now</button> 
+     
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
@@ -26,18 +27,12 @@ var options = {
     "order_id": "<%= order %>", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
     "handler": function (response){
         alert(response.razorpay_payment_id);
-        alert(response.razorpay_order_id);
-        alert(response.razorpay_signature)
-        var headers = {
-    'Content-Type': 'application/json'
-}
-var options = {
-    url: "/api/payment/verify",
-    method: 'POST',
-    headers: headers,
-    json: true,
-    body: {razorpay_payment_id:response.razorpay_payment_id, razorpay_order_id:response.razorpay_order_id,razorpay_signature:response.razorpay_signature}
-}
+       
+
+        document.getElementById("razorpay_payment_id").value=response.razorpay_payment_id
+        document.getElementById("razorpay_order_id").value=response.razorpay_order_id
+        document.getElementById("razorpay_signature").value=response.razorpay_signature
+        
 
     }
 };
@@ -56,6 +51,25 @@ document.getElementById('rzp-button1').onclick = function(e){
     e.preventDefault();
 }
 </script>
-
+<br><br>
+    <img src="<%=adnew.img_url %>"
+    <br>
+    <p>leadre name : <%= adnew.leader_name %></p>
+    <br>
+    <p> leader email : <%= adnew.leader_email %></p>
+    <br>
+    <p>team member name : <%= adnew.team_member_name %></p>
+    <br>
+    <p>team member email : <%= adnew.team_member_email %></p>
+    <br>
+    <form action="/api/payment/verify"  method="post">
+    <input type="text" id ="razorpay_payment_id" name="razorpay_payment_id" placeholder="razorpay_payment_id" required readonly/>
+     <br>
+     <input type="text" id ="razorpay_order_id" name="razorpay_order_id" placeholder="razorpay_order_id" required readonly/>
+     <br>
+     <input type="text" id ="razorpay_signature" name="razorpay_signature" placeholder="razorpay_signature" required readonly/>
+     <br>
+   <input  type="submit" value ="submit">
+    </form>
 </body>
 </html>
